include_directories(../../include)
include_directories(../../src)
add_executable(
    sequencer_test
        main.cpp
        ../../src/storage.cpp
        ../../src/page.cpp
        ../../src/akumuli.cpp
        ../../src/util.cpp
        ../../src/sequencer.cpp
        ../../src/cursor.cpp
)
target_link_libraries(sequencer_test
    "${APR_LIBRARY}"
    ${Boost_LIBRARIES}
    libboost_coroutine.a
    libboost_context.a
    profiler
)
